--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-plugin-component": "^1.1.1",
+    "babel-preset-es2015": "^6.24.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
