--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@vue/cli-service": "~4.3.0",
     "babel-plugin-component": "^1.1.1",
     "babel-preset-es2015": "^6.24.1",
+    "less": "^3.11.1",
+    "less-loader": "^6.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
